--- a/styles.css
+++ b/styles.css
@@ -25,16 +25,19 @@ body {
 .rightimg, .leftimg {
   width:230px;
   position: absolute;
-  top: 75px;
-}
-
-.rightimg { 
-  right: 50px;
 }
 
 .leftimg {
- left: 20px;
+  left: 20px;
+  top: 85px;
+ }
+
+.rightimg { 
+  right: 50px;
+  top: 155px;
 }
+
+
 
 .content {
   display: flex;
@@ -44,7 +47,7 @@ body {
 }
 
 .quiz-container {
-  width: 130vh;
+  width: 120vh;
   padding: 20px;
   top: -20px;
   left: 45px;
@@ -117,4 +120,26 @@ body {
   align-items: center;
   margin-top: 200px;
 }
+
+
+@media (max-width: 600px) {
+  .rightimg, .leftimg {
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 750px) {
+  .rightimg, .leftimg {
+    visibility: hidden;
+  }
+}
+
+@media (min-width: 751px) and (max-width: 999px) {
+  
+}
+
+@media (min-width: 1000px) {
+  
+}
+
 
